--- a/package.json
+++ b/package.json
@@ -1,42 +1,28 @@
 {
-  "name": "nextly-template",
+  "name": "my-app",
   "version": "0.1.0",
-  "description": "Nextly Landing Page Template",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://gituhb.com/web3templates/nextly-template"
-  },
-  "keywords": [
-    "nextjs",
-    "tailwindcss",
-    "free"
-  ],
-  "author": "Surjith S M",
-  "license": "ISC",
   "dependencies": {
-    "@emotion/css": "^11.10.6",
-    "@emotion/react": "^11.10.6",
-    "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.6",
-    "@headlessui/react": "^1.7.14",
-    "@heroicons/react": "^2.0.17",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "next": "^13.3.1",
-    "next-themes": "^0.2.1",
+    "@vercel/analytics": "^1.0.2",
+    "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.43.9"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "eslint-config-prettier": "^8.8.0",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.1"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.4",
+    "postcss": "^8",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
